--- a/www/wp-content/themes/m-master/template/article/__selector/article__selector_resize.css
+++ b/www/wp-content/themes/m-master/template/article/__selector/article__selector_resize.css
@@ -2,3 +2,7 @@
   .article__selector label {
     line-height: 1.5;
     font-size: 18px; } }
+
+@media screen and (max-width: 768px) {
+  .article__selector section, .article__selector p {
+    font-size: 12px; } }
