--- a/www/wp-content/themes/m-master/template/dm-overlay/dm-overlay.css
+++ b/www/wp-content/themes/m-master/template/dm-overlay/dm-overlay.css
@@ -88,7 +88,7 @@
   -webkit-border-radius: 0px;
           border-radius: 0px;
   width: 94%;
-  font-family: HelveticaNeueCyr-UltraLightItalic; }
+  font-family: HelveticaNeueCyr-Italic; }
 
 .dm-modal button {
   font-size: 14.5px;
