--- a/www/wp-content/themes/m-master/template/dm-overlay/dm-overlay.scss
+++ b/www/wp-content/themes/m-master/template/dm-overlay/dm-overlay.scss
@@ -94,7 +94,7 @@
     padding: 10px 12px; 
     border-radius: 0px;
     width: 94%;
-    font-family:HelveticaNeueCyr-UltraLightItalic;
+    font-family:HelveticaNeueCyr-Italic;
 }
 .dm-modal button{
        font-size:14.5px;
