--- a/www/wp-content/themes/m-master/template/header/__contacts/header__contacts.scss
+++ b/www/wp-content/themes/m-master/template/header/__contacts/header__contacts.scss
@@ -1,21 +1,27 @@
 .header__contacts{
+    display:table;
+    margin-top:15px;
+    float:right;
 	a{
 	  background:url("./optimized/img-min/phone-button.png");
 	  width:54px;
 	  height:54px;
 	  display:block;
-	  float:right;
 	  cursor:pointer;
 	  margin-top:15px;
+	  display:table-cell;
+	  vertical-align:middle;
 	}
 	a:hover{
 	 background-position-x:54px;
 	}
 	p{
-	 float:right;
-	 margin-left:10px;
+	 padding-left:15px;
 	 font-family:HelveticaNeueCyr-Light;
 	 font-size:18.12px;
 	 color:#db0303;
+	 font-weight:600;
+	 display:table-cell;
+	 vertical-align:middle;
 	}
 }
