--- a/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector.scss
+++ b/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector.scss
@@ -1,11 +1,12 @@
 .fifth-block__selector{
-    width:38%;
+    width:43%;
     box-sizing:border-box;
     -webkit-padding-start: 0px;
     -webkit-margin-before: 0em;
     -webkit-margin-after: 0em;
     display:table-cell;
     vertical-align:middle;
+    padding:25px 0px;
     ul{
     -webkit-padding-start: 0px;
     -webkit-margin-before: 0em;
