--- a/www/wp-content/themes/m-master/template/main-page/nineth-block/nineth-block.scss
+++ b/www/wp-content/themes/m-master/template/main-page/nineth-block/nineth-block.scss
@@ -34,7 +34,7 @@
 	    height:35px;
 	    width:305px;
 	    padding-left:12px;
-	    font-family:HelveticaNeueCyr-UltraLightItalic;
+	    font-family:HelveticaNeueCyr-Italic;
 	    font-size:14px;
 	}
 	button{
