--- a/www/wp-content/themes/m-master/template/article/__content/article__content.css
+++ b/www/wp-content/themes/m-master/template/article/__content/article__content.css
@@ -5,9 +5,9 @@
   font-family: HelveticaNeueCyr-Light;
   font-size: 18px;
   background: rgba(255, 255, 255, 0.7);
-  -webkit-box-shadow: 0 0 10px 5px #dddddd;
-          box-shadow: 0 0 10px 5px #dddddd;
-  margin-top: 60px;
+  -webkit-box-shadow: 0px 0px 20.52px 6.48px rgba(0, 0, 0, 0.33);
+          box-shadow: 0px 0px 20.52px 6.48px rgba(0, 0, 0, 0.33);
+  margin-top: 100px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   z-index: 1;
