--- a/www/wp-content/themes/m-master/template/article/__selector/article__selector.scss
+++ b/www/wp-content/themes/m-master/template/article/__selector/article__selector.scss
@@ -20,7 +20,7 @@
 	   line-height:3;
 	   border:1px solid #cccccc;
 	   background:#ebebeb;
-	   padding:0px 30px;
+	   padding:0px 20px;
 	   color:#505050;
 	   cursor:pointer;
 	   display:block;
@@ -41,8 +41,10 @@
       border:1px solid #cccccc;
       border-top: 0px;
       padding:20px 0px;
-      padding-left:30px;
+      padding-left:20px;
+      padding-right:10px;
       display:none;
+      box-sizing:border-box;
       p{
         text-indent:0px;
       }
