--- a/www/wp-content/themes/m-master/template/discounts/__page/discounts__page.scss
+++ b/www/wp-content/themes/m-master/template/discounts/__page/discounts__page.scss
@@ -2,6 +2,7 @@
 {
     font-family:HelveticaNeueCyr-Light;
     margin-top:70px;
+    box-sizing:border-box;
 	h1,h2,h3,h4,h5,h6{
 	   margin-top:70px;
 	   color:#db0303;
@@ -14,7 +15,6 @@
 	    -webkit-margin-before: 0em;
 	    font-size:18px;
 	    color:#505050;
-	    font-weight:600;
 	    text-indent: 39px;
 	}
 }
