--- a/www/wp-content/themes/m-master/template/footer/__contacts/footer__contacts.css
+++ b/www/wp-content/themes/m-master/template/footer/__contacts/footer__contacts.css
@@ -3,16 +3,20 @@
   width: 54px;
   height: 54px;
   display: block;
-  float: right;
   cursor: pointer;
-  margin-top: 15px; }
+  margin-top: 15px;
+  display: table-cell;
+  vertical-align: middle; }
 
 .footer__contacts a:hover {
   background-position-x: 54px; }
 
 .footer__contacts p {
-  float: right;
   margin-left: 10px;
   font-family: HelveticaNeueCyr-Light;
   font-size: 18.12px;
-  color: #db0303; }
+  color: #db0303;
+  display: table-cell;
+  vertical-align: middle;
+  font-weight: 600;
+  padding-left: 15px; }
