--- a/www/wp-content/themes/m-master/template/footer/footer.css
+++ b/www/wp-content/themes/m-master/template/footer/footer.css
@@ -20,7 +20,7 @@
     height: 35px;
     width: 305px;
     padding-left: 12px;
-    font-family: HelveticaNeueCyr-UltraLightItalic;
+    font-family: HelveticaNeueCyr-Italic;
     font-size: 14px; }
   .footer button {
     font-size: 14.5px;
@@ -46,7 +46,7 @@
     margin-top: 20px; }
   .footer copyrights {
     margin-top: 40px;
-    font-family: HelveticaNeueCyr-Light;
+    font-family: HelveticaNeueCyr-Italic;
     font-size: 14px;
     color: #505050;
     float: left;
