--- a/www/wp-content/themes/m-master/template/footer/footer.scss
+++ b/www/wp-content/themes/m-master/template/footer/footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    float:left;
+  float:left;
 	margin:0px 0px;
 	margin-top:10px;
 	width:100%;
@@ -18,7 +18,7 @@
 	    height:35px;
 	    width:305px;
 	    padding-left:12px;
-	    font-family:HelveticaNeueCyr-UltraLightItalic;
+	    font-family:HelveticaNeueCyr-Italic;
 	    font-size:14px;
 	}
 	button{
@@ -44,7 +44,7 @@
     }
     copyrights{
         margin-top:40px;
-        font-family:HelveticaNeueCyr-Light;
+        font-family:HelveticaNeueCyr-Italic;
         font-size:14px;
         color:#505050;
         float:left;
