--- a/www/wp-content/themes/m-master/template/guarantee/__page/guarantee__page.css
+++ b/www/wp-content/themes/m-master/template/guarantee/__page/guarantee__page.css
@@ -1,5 +1,7 @@
 .guarantee__page {
-  font-family: HelveticaNeueCyr-Light; }
+  font-family: HelveticaNeueCyr-Light;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
   .guarantee__page h1, .guarantee__page h2, .guarantee__page h3, .guarantee__page h4, .guarantee__page h5, .guarantee__page h6 {
     margin-top: 70px;
     color: #db0303;
@@ -11,5 +13,4 @@
     -webkit-margin-before: 0em;
     font-size: 18px;
     color: #505050;
-    font-weight: 600;
     text-indent: 39px; }
