--- a/www/wp-content/themes/m-master/template/main-page/fifth-block/__content/fifth-block__content.css
+++ b/www/wp-content/themes/m-master/template/main-page/fifth-block/__content/fifth-block__content.css
@@ -1,7 +1,6 @@
 .fifth-block__content {
-  height: 493px;
-  -webkit-box-shadow: 0 0 10px 8px #dddddd;
-          box-shadow: 0 0 10px 8px #dddddd;
+  -webkit-box-shadow: 0px 0px 24.32px 7.68px rgba(0, 0, 0, 0.29);
+          box-shadow: 0px 0px 24.32px 7.68px rgba(0, 0, 0, 0.29);
   background-image: url("./optimized/img-min/ne-slivaet-vodu.jpg");
   -webkit-background-size: 100% 100%;
           background-size: 100% 100%;
