--- a/www/wp-content/themes/m-master/template/main-page/fifth-block/__content/fifth-block__content.scss
+++ b/www/wp-content/themes/m-master/template/main-page/fifth-block/__content/fifth-block__content.scss
@@ -1,6 +1,5 @@
 .fifth-block__content{
-	height:493px;
-	box-shadow: 0 0 10px 8px rgba(221, 221, 221, 1);
+	box-shadow: 0px 0px 24.32px 7.68px rgba(0, 0, 0, 0.29); 
 	background-image:url("./optimized/img-min/ne-slivaet-vodu.jpg");
 	background-size:100% 100%;
 	font-family:HelveticaNeueCyr-Light;
