--- a/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector.css
+++ b/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector.css
@@ -1,12 +1,13 @@
 .fifth-block__selector {
-  width: 38%;
+  width: 43%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-padding-start: 0px;
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
   display: table-cell;
-  vertical-align: middle; }
+  vertical-align: middle;
+  padding: 25px 0px; }
   .fifth-block__selector ul {
     -webkit-padding-start: 0px;
     -webkit-margin-before: 0em;
