--- a/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector_resize.css
+++ b/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector_resize.css
@@ -1,11 +1,15 @@
 @media screen and (max-width: 1100px) {
   .fifth-block__selector label {
     font-size: 16px;
-    line-height: 2; } }
+    line-height: 2;
+    padding-top: 20px;
+    padding-bottom: 20px; } }
 
 @media screen and (max-width: 768px) {
-  .fifth-block__selector label {
-    font-size: 14px;
-    line-height: 1.5;
-    padding: 0px 0px;
-    padding-left: 5px; } }
+  .fifth-block__selector {
+    padding: 0px 0px; }
+    .fifth-block__selector label {
+      font-size: 14px;
+      line-height: 1.5;
+      padding: 0px 0px;
+      padding-left: 5px; } }
