--- a/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector_resize.scss
+++ b/www/wp-content/themes/m-master/template/main-page/fifth-block/__selector/fifth-block__selector_resize.scss
@@ -3,12 +3,15 @@
      label{
          font-size:16px;
          line-height:2;
+         padding-top:20px;
+         padding-bottom:20px;
      }
 	
 }
 }
 @media screen and (max-width:768px){
 .fifth-block__selector{
+     padding:0px 0px;
      label{
          font-size:14px;
          line-height:1.5;
