--- a/www/wp-content/themes/m-master/template/main-page/nineth-block/nineth-block.css
+++ b/www/wp-content/themes/m-master/template/main-page/nineth-block/nineth-block.css
@@ -34,7 +34,7 @@
     height: 35px;
     width: 305px;
     padding-left: 12px;
-    font-family: HelveticaNeueCyr-UltraLightItalic;
+    font-family: HelveticaNeueCyr-Italic;
     font-size: 14px; }
   .nineth-block button {
     font-size: 14.5px;
