--- a/www/wp-content/themes/m-master/template/main-page/second-block/__content/second-block__content.css
+++ b/www/wp-content/themes/m-master/template/main-page/second-block/__content/second-block__content.css
@@ -5,9 +5,9 @@
   font-family: HelveticaNeueCyr-Light;
   font-size: 18px;
   background: rgba(255, 255, 255, 0.7);
-  -webkit-box-shadow: 0 0 10px 5px #dddddd;
-          box-shadow: 0 0 10px 5px #dddddd;
-  margin-top: 60px;
+  -webkit-box-shadow: 0px 0px 20.52px 6.48px rgba(0, 0, 0, 0.33);
+          box-shadow: 0px 0px 20.52px 6.48px rgba(0, 0, 0, 0.33);
+  margin-top: 80px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   z-index: 1; }
@@ -18,4 +18,5 @@
     display: block;
     font-weight: 600; }
   .second-block__content p {
-    text-indent: 39px; }
+    text-indent: 39px;
+    color: #505050; }
