--- a/www/wp-content/themes/m-master/template/main-page/second-block/__content/second-block__content.scss
+++ b/www/wp-content/themes/m-master/template/main-page/second-block/__content/second-block__content.scss
@@ -5,8 +5,8 @@
 	font-family:HelveticaNeueCyr-Light;
 	font-size:18px;
 	background:rgba(255,255,255,0.7);
-	box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
-	margin-top:60px;
+	box-shadow: 0px 0px 20.52px 6.48px rgba(0, 0, 0, 0.33);
+	margin-top:80px;
 	box-sizing:border-box;
 	z-index:1;
 	span{
@@ -18,5 +18,6 @@
 	}
 	p{
 	 text-indent: 39px;
+	 color:#505050;
 	}
 }
