--- a/www/wp-content/themes/m-master/template/main-page/ten-block/ten-block.scss
+++ b/www/wp-content/themes/m-master/template/main-page/ten-block/ten-block.scss
@@ -32,7 +32,7 @@
 	    background:white !important;
 	    color:#505050 !important;
 	    opacity:1 !important;
-	    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+	    box-shadow: 0px 0px 26.88px 5.12px rgba(0, 0, 0, 0.29); 
 	    font-family:HelveticaNeueCyr-Light !important;
 	    text-align:left !important;
 	    font-weight:600 !important;
@@ -56,6 +56,7 @@
 	    font-family:Lloyd !important;
 	    font-weight:600 !important;
 	    top:35% !important;
+	    text-shadow: 0px 0px 1px #505050;
 }
 .rslides_nav.prev{
 	left:-460px !important;
@@ -77,6 +78,7 @@
     font-size:72px !important;
     font-weight:600 !important;
     font-family:Lloyd !important;
+    text-shadow: 0px 0px 1px #505050;
 
 }
 .rt-wpls .slick-prev, .rt-wpls .slick-next{
@@ -92,6 +94,7 @@
 	font-size:72px !important;
 	font-weight:600 !important;
 	font-family:Lloyd !important;
+	text-shadow: 0px 0px 1px #505050;
 }
 .slick-arrow{
 	top:55% !important;
