--- a/www/wp-content/themes/m-master/template/main-page/third-block/__form/third-block__form.scss
+++ b/www/wp-content/themes/m-master/template/main-page/third-block/__form/third-block__form.scss
@@ -6,7 +6,7 @@
 	text-align:center;
 	font-family:HelveticaNeueCyr-Light;
 	background:white;
-	box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+	box-shadow: 0px 0px 24.07px 4.93px rgba(0, 0, 0, 0.4); 
 	padding:30px;
 	position:absolute;
 	right:30px;
@@ -31,7 +31,7 @@
 	 margin-bottom:15px;
 	 height:35px;
 	 padding-left:10px;
-	 font-family:HelveticaNeueCyr-UltraLightItalic;
+	 font-family:HelveticaNeueCyr-Italic;
 	 font-size:14px;
 	 color:#505050;
 	 box-sizing:border-box;
@@ -42,7 +42,7 @@
 	  resize: none;
 	  height:130px;
 	  padding-left:10px;
-	  font-family:HelveticaNeueCyr-UltraLightItalic;
+	  font-family:HelveticaNeueCyr-Italic;
 	  font-size:14px;
 	  color:#505050;
 	  padding-top:5px;
@@ -51,7 +51,7 @@
 	div{
 	 width:33%;
 	 float:left;
-	 font-family:HelveticaNeueCyr-UltraLightItalic;
+	 font-family:HelveticaNeueCyr-Italic;
 	 padding-bottom:20px;
 	 font-size:14px;
 	 option{
@@ -86,10 +86,17 @@
         -ms-appearance: none;
         appearance: none!important;
         -moz-appearance: none;
-         -webkit-appearance: none;
+        -webkit-appearance: none;
+        -o-appearance:none;
         background-image: url('./optimized/img-min/select-button.jpg');
         background-position: right center;
         background-repeat: no-repeat;
         width:95%;
+        text-align:center;
+        text-align-last: center;
+        padding-right:35px;
 	}
+	select::-ms-expand{
+     display:none;
+    }
 }
